fixed small btn and top-navigation

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,8 @@
       </section>
 
       <section id="testimonials" class="testimonials pt-120">
-        <div class="testimonials-description">
+        <div class="container">
+          <div class="testimonials-description">
           <h2 class="h2">
             Testimonials
           </h2>
@@ -321,16 +322,19 @@
             <div class="swiper-button-prev barbers-content__prev-btn"></div>
           </div>
         </div>
+        </div>
       </section>
 
      <section class="our-price">
-      <div class="our-price-description">
+      <div class="container">
+        <div class="our-price-description">
         <h2 class="h2">
           Our Price
         </h2>
         <h4 class="h4 subtitle2 text-center">
           Subheading that reveals the details of the title and calls for the targeted action
         </h4>       
+      </div>
       </div>
       <div class="service-container">
         <div class="service-table pt-47">
